# gclicker

./: README.md  install.sh  pyproject.toml  setup.py
gclicker/: __init__.py  cli.py  clicker.py  dbus_service.py  gui.py  settings.py  wayland_clicker.py
