[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gclicker"
version = "1.0.0"
description = "A simple auto-clicker for Linux with Wayland support"
authors = [{name = "gclicker"}]
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.42.0",
    "pynput>=1.7.0",
]

[project.scripts]
gclicker = "gclicker.gui:main"
gclicker-cli = "gclicker.cli:main_cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
