[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gclicker"
version = "1.0.0"
description = "A simple auto-clicker for Linux with Wayland support"
authors = [{name = "gclicker"}]
requires-python = ">=3.8"
dependencies = [
    "pynput>=1.7.0",
]

# Note: PyGObject is installed via system package manager
# Install python3-gobject, gtk4, and libadwaita from your distro repos

[project.scripts]
gclicker = "gclicker.gui:main"
gclicker-cli = "gclicker.cli:main_cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
